--- a/nextjs-poc/src/app/page.module.css
+++ b/nextjs-poc/src/app/page.module.css
@@ -18,6 +18,7 @@
   font-family: var(--font-mono);
 }
 
+
 .description a {
   display: flex;
   justify-content: center;
@@ -44,6 +45,30 @@
   grid-template-columns: repeat(4, minmax(25%, auto));
   max-width: 100%;
   width: var(--max-width);
+}
+
+.default {
+  padding: 1rem 1.2rem;
+  border-radius: var(--border-radius);
+  background: rgba(var(--card-rgb), 0);
+  border: 1px solid rgba(var(--card-border-rgb), 0);
+  transition: background 200ms, border 200ms;
+}
+
+.default h2 {
+  font-weight: 600;
+  margin-bottom: 0.7rem;
+  text-align: center;
+}
+
+.default p {
+  margin: 0;
+  opacity: 0.6;
+  font-size: 0.9rem;
+  line-height: 1.5;
+  max-width: 60ch;
+  text-wrap: balance;
+  text-align: center;
 }
 
 .card {
